--- a/index.html
+++ b/index.html
@@ -3,11 +3,11 @@
 
 <head>
 
-    <meta charset="utf-8">
+    <!-- <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="description" content="Conheça um pouco mais sobre o desenvolvedor Ramiro Lima">
-    <meta name="author" content="Ramiro Lima">
+    <meta name="author" content="Ramiro Lima"> -->
 
     <title> Conheça meu trabalho</title>
     <script> var repeat=1 // 0 para rolar uma vez, 1 para rolar infinitamente
@@ -187,6 +187,10 @@
                         <li class="list-group-item">
                             <span class="badge">90%</span>
                             C
+                        </li>
+                        <li class="list-group-item">
+                            <span class="badge">80%</span>
+                            Git
                         </li>
                         <li class="list-group-item">
                             <span class="badge">70%</span>
