ajeitando a imagem do workapp

--- a/index.html
+++ b/index.html
@@ -297,7 +297,7 @@
                         <div class="modal-body">
                             <h2>WorkApp - Fitness</h2>
                             <hr class="star-primary">
-                            <img src="img/portfolio/workApp.png" class="img-responsive img-centered" alt="">
+                            <img src="img/portfolio/WorkApp.png" class="img-responsive img-centered" alt="">
                             <p>WorkApp - Fitness é um app que busca ajudar seus usuários na academia, guiando-os na execução dos exercícios, sendo um tutorial com descrição e vídeo mostrando cada exercício, tendo-se a opção de criar sua ficha de treino no aplicativo, facilitando o controle e divisão do mesmo.
                             <br>
                             </br>
