--- a/index.html
+++ b/index.html
@@ -174,7 +174,7 @@
             </div>
             <div class="row">
                 <div class="col-lg-6 col-lg-offset-3 text-center">
-                    <p>Ramiro Lima, 23, desenvolvedor. Graduando em Engenharia da Computação pelo Instituto Federal de Ciência e Tecnologia do Ceará(IFCE), já foi bolsista  CNPQ onde trabalhou no laboratório LAPADA, estagiário do Brazilian Education Program for iOS Development(BEPiD) e da Deway Sistemas e Soluções.</p>
+                    <p>Ramiro Lima, 23, desenvolvedor. Graduando em Engenharia da Computação pelo Instituto Federal de Ciência e Tecnologia do Ceará(IFCE), já foi bolsista  CNPQ onde trabalhou no laboratório LAPADA, estagiário do Brazilian Education Program for iOS Development(BEPiD). Depois foi estagiário Deway Sistemas e Soluções, onde estagiou com Web/Mobile, por fim trabalhou na A2Software como desenvolvedor do aplicativo "PedGanha".</p>
                 </div>
                 <div class="col-lg-4 col-md-offset-4">
                     <ul class="list-group" style="color: black">
