Acrescentando os outros aplicativos

--- a/index.html
+++ b/index.html
@@ -158,8 +158,33 @@
                         <img src="img/portfolio/iWhey.png" class="img-responsive" alt="">
                     </a>
                 </div>
+                <div class="col-lg-12">
+                <div class="col-lg-12 text-center">
+                    <h2>Aplicativos terceirizados:</h2>
+                    
                 </div>
-            </div>
+                <div class="col-lg-2">
+                </div>
+                <div class="col-sm-4 portfolio-item">
+                    <a href="#portfolioModal5" class="portfolio-link" data-toggle="modal">
+                        <div class="caption">
+                            <div class="caption-content">
+                                <i class="fa fa-search-plus fa-3x"></i>
+                            </div>
+                        </div>
+                        <img src="img/portfolio/PedGanha.png" class="img-responsive" alt="">
+                    </a>
+                </div>
+                <div class="col-sm-4 portfolio-item">
+                    <a href="#portfolioModal6" class="portfolio-link" data-toggle="modal">
+                        <div class="caption">
+                            <div class="caption-content">
+                                <i class="fa fa-search-plus fa-3x"></i>
+                            </div>
+                        </div>
+                        <img src="img/portfolio/ubna.png" class="img-responsive" alt="">
+                    </a>
+                </div>
         </div>
     </section>
 
@@ -372,7 +397,7 @@
                 <div class="row">
                     <div class="col-lg-8 col-lg-offset-2">
                         <div class="modal-body">
-                            <h2>Fast Map - Encontre locais abertos agora</h2>
+                            <h2>Projeto Verde - Conectando homens e árvores!</h2>
                             <hr class="star-primary">
                             <img src="img/portfolio/ProjetoVerde.png" class="img-responsive img-centered" alt="">
                             <p>Projeto Verde - Conectando homens e árvores!
@@ -430,6 +455,93 @@
                             </p>
                             <div>
                             <button onclick="window.open('http://iwheyapp.com.br/stores/sign_in');" type="button" class="btn btn-danger">Em Breve</button>
+                            </div>
+                            <div style="padding-top: 10px">
+                            <button type="button" class="btn btn-default" data-dismiss="modal"><i class="fa fa-times"></i> Fechar</button>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+    <div class="portfolio-modal modal fade" id="portfolioModal5" tabindex="-1" role="dialog" aria-hidden="true">
+        <div class="modal-content">
+            <div class="close-modal" data-dismiss="modal">
+                <div class="lr">
+                    <div class="rl">
+                    </div>
+                </div>
+            </div>
+            <div class="container">
+                <div class="row">
+                    <div class="col-lg-8 col-lg-offset-2">
+                        <div class="modal-body">
+                            <h2>PedGanha</h2>
+                            <hr class="star-primary">
+                            <img src="img/portfolio/PedGanha.png" class="img-responsive img-centered" alt="">
+                            <p>
+                            Que tal uma plataforma totalmente nova e com um diferencial enorme? 
+                            No PedGanha além de conseguir fazer os seus pedidos você ainda ganhará bônus a cada pedido, para trocar por descontos, produtos ou até fazer doações para instituições de caridade!
+                            </br>
+                            Qual o diferencial do PedGanha?
+                            - O PedGanha tem Wins
+                            </br>
+                            - Praticidade
+                            O PedGanha além do site conta com aplicativos para facilitar suas compras.
+                            </br>
+                            - Velocidade
+                            Assim que seu pedido é efetuado o mesmo é enviado diretamente ao restaurante. Diminuindo erros ocasionados por falta de comunicação ao telefone.
+                            </br>
+                            - Conforto e segurança
+                            No PedGanha você não precisa sair do conforto de sua casa para desfrutar de uma boa comida.
+                            </br>
+                            - Diversidade
+                            No PedGanha, temos uma grande variedade de restaurantes cadastrados a seu dispor.
+                            </br>
+                            Peça no PedGanha a melhor plataforma de delivery online onde você pode pedir pizza, comida asiática(chinesa/Japonesa), sushi, sanduíches entre outros tipos de comidas deliciosas! Tá esperando o que? Faça logo seu pedido no PedGanha! A melhor e a mais nova plataforma de Delivery Online!
+                            </br>
+                            Delivery online diferenciado e com bônus só aqui no PedGanha!A todo momento pronto para satisfazer sua fome!
+                            </br>
+                            Aqui você pede e você ganha
+                            www.pedganha.com.br
+                            </p>
+                            <div>
+                            <button onclick="window.open('https://itunes.apple.com/br/app/pedganha/id1148426514?l=en&mt=8');" type="button" class="btn btn-success">Baixar</button>
+                            </div>
+                            <div style="padding-top: 10px">
+                            <button type="button" class="btn btn-default" data-dismiss="modal"><i class="fa fa-times"></i> Fechar</button>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+    <div class="portfolio-modal modal fade" id="portfolioModal6" tabindex="-1" role="dialog" aria-hidden="true">
+        <div class="modal-content">
+            <div class="close-modal" data-dismiss="modal">
+                <div class="lr">
+                    <div class="rl">
+                    </div>
+                </div>
+            </div>
+            <div class="container">
+                <div class="row">
+                    <div class="col-lg-8 col-lg-offset-2">
+                        <div class="modal-body">
+                            <h2>UBNA</h2>
+                            <hr class="star-primary">
+                            <img src="img/portfolio/ubna.png" class="img-responsive img-centered" alt="">
+                            <p>
+                            Olá, tudo bem? Aqui é Diogo Esteves mais uma vez com você!
+                            </br>
+                            Esse é o nosso aplicativo! Com ele espero entregar cada vez mais informações para sua mudança e espero ajudar a tornar esse seu sonho em realidade e oferecer a qualidade de vida que sua família merece.
+                            </br>
+                            Seja bem-vindo!
+                            </p>
+                            <div>
+                            <button onclick="window.open('https://itunes.apple.com/br/app/ubna/id1141502990?mt=8');" type="button" class="btn btn-success">Baixar</button>
                             </div>
                             <div style="padding-top: 10px">
                             <button type="button" class="btn btn-default" data-dismiss="modal"><i class="fa fa-times"></i> Fechar</button>
