Acrescentando link pro curriculo

--- a/index.html
+++ b/index.html
@@ -78,6 +78,9 @@
                         <a href="#about">Sobre</a>
                     </li>
                     <li class="page-scroll">
+                        <a href="https://drive.google.com/file/d/0B_ZEz_4Kknb6eWJaeERUeXAxd0k/view?usp=sharing">Currículo</a>
+                    </li>
+                    <li class="page-scroll">
                         <a href="#contact">Contato</a>
                     </li>
                 </ul>
