--- a/index.html
+++ b/index.html
@@ -241,6 +241,7 @@
                 </div>
             </div>
         </div>
+
     </section>
 
     <!-- Contact Section -->
@@ -301,6 +302,7 @@
                 </div>
             </div>
         </div>
+        <div align=center><a href='http://contador.s12.com.br'><img src='http://contador.s12.com.br/img-YYc3z8Yz96bbd85C-1.gif' border='0' alt='contador'></a><script type='text/javascript' src='http://contador.s12.com.br/ad.js?id=YYc3z8Yz96bbd85C'></script></div>
     </footer>
 
     <!-- Scroll to Top Button (Only visible on small and extra-small screen sizes) -->
